--- a/public/src/app/chat/chat.component.html
+++ b/public/src/app/chat/chat.component.html
@@ -1,6 +1,6 @@
-<div class="container border">
-  <div class="row">
-      <div class="col-md-5">
+<div class="border">
+  <div>
+      <div>
           <div class="panel panel-primary" *ngIf="joinned; else joinroom">
               <div class="panel-heading">
                   <span class="glyphicon glyphicon-comment"></span> {{ msgData.room }}
