--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,11 +1,30 @@
-<div class="container">
+<h1>WHITEBOARD!</h1>
 
-    <h1>Test</h1>
-    
-    <div>
-        <app-chat></app-chat>
-    </div>
-    <app-canvas></app-canvas>
+        <div class="col-md-7 roww">
+            
+            <div class='nav'>
+                <input type='text' (colorPickerChange)="update(color)" (colorPickerSelect)="update(color)" [cpFallbackColor]="000000" [cpOKButton]="true" [cpOKButtonClass]= "'btn btn-primary btn-xs'" [(colorPicker)]="color" [style.background]="color" value="Pick a Color" />
+                <button (click)="microify()" class="btn btn-secondary">Tiny</button>
+                <button (click)="smallify()" class="btn btn-secondary">Small</button>
+                <button (click)="medify()" class="btn btn-secondary">Medium</button>
+                <button (click)="bigify()" class="btn btn-secondary">Large</button>
+                <div class="btn-group btn-group-toggle selector" data-toggle="buttons" >
+                    <label class="btn btn-primary active" (click)="draw(color)">
+                        <input type="radio" name="options" autocomplete="off" checked > Draw
+                    </label>
+                    <label class="btn btn-primary" (click)="eraser()">
+                        <input type="radio" name="options" autocomplete="off"> Erase
+                    </label>
+                </div>
+                <button (click)="clear()" class="btn btn-danger">Clear</button>
+            </div>
+            
+            <app-canvas [(markerColor)] = "selectedColor" [size]="selectedSize"> </app-canvas>
+        </div>
+        
+        <div class="col-md-5 roww">
+            <app-chat></app-chat>
+        </div>
+        
     <router-outlet></router-outlet>
     
-</div>
