--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>WHITEBOARD!</h1>
+<h1 class="bg-info p-3 text-white text-center">Collaborative Whiteboard</h1>
 
         <div class="container1 sm-4 med-4 lg-4 xlg-3">
             
@@ -23,7 +23,7 @@
         </div>
         
         <div class="container2 sm-4 med-4 lg-4 xlg-1">
-            <app-chat></app-chat>
+            <app-chat class="m-3"></app-chat>
         </div>
         
     <router-outlet></router-outlet>
