--- a/public/src/app/chat/chat.component.html
+++ b/public/src/app/chat/chat.component.html
@@ -1,5 +1,5 @@
-<div class="border">
-  <div>
+<div class="border ml-3 mr-3 bg-white">
+  <div class="p-2 ">
       <div>
           <div class="panel panel-primary" *ngIf="joinned; else joinroom">
               <div class="panel-heading">
